--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,14 @@
             <a class="navbar-item-expanded" href="/sequences">Sequences</a>
         </div>
 
+        <div id="node_warn_added" class="warn_msg">
+            <p style="margin: 0; color: black;">New node added, please reload page.</p>
+        </div>
+        <div id="node_warn_crash" class="warn_msg">
+            <p id="node_warn_crash_txt" style="margin: 0; color: black;"></p>
+        </div>
+        <script src="/static/js/socketio.js"></script>
+        <script src="/static/js/checknewlauncher.js"></script>
         {% block content %}
 
         {% endblock %}
