--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
         </div>
 
         <div id="node_warn_added" class="warn_msg">
-            <p style="margin: 0; color: black;">New node added, please reload page.</p>
+            <p style="margin: 0; color: black;">New node added, please reload page. <span><button class="yellow_close_button" onclick="close_add_node();">X</button></span></p>
         </div>
         <div id="node_warn_crash" class="warn_msg">
             <p id="node_warn_crash_txt" style="margin: 0; color: black;"></p>
