Add node setting page

--- a/templates/settings/launchers/launchers.html
+++ b/templates/settings/launchers/launchers.html
@@ -11,6 +11,7 @@
       <a class="firework_button" href="/settings/launchers/edit_name/start{{ urlencode(launchers[launcher], safe='') }}">Change Name</a>
     </h2>
   {% endfor %}
+  <a class="firework_button" href="/settings/launchers/espnode_settings">ESP Node Settings</a>
 </div>
 <script src="/static/js/socketio.js"></script>
 <script src="/static/js/launchers.js"></script>
