Starting moving to Vue. Get home page mostly moved over

--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,7 @@
         <div id="node_warn_crash" class="warn_msg">
             <p id="node_warn_crash_txt" style="margin: 0; color: black;"></p>
         </div>
+        <script src="/static/js/vue.js"></script>
         <script src="/static/js/socketio.js"></script>
         <script src="/static/js/checknewlauncher.js"></script>
         {% block content %}
